# llama4micro

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MIMXRT1176xxxxx_cm7_ram.ld  README.md  llama2.h  main.cc  yolov5.h
models/: README.md  export_coco_labels.py
models/llama2/: tokenizer4096.model
models/yolov5/: yolov5n-int8_edgetpu.tflite
